--- a/css/index.css
+++ b/css/index.css
@@ -65,6 +65,20 @@ h1, h2, h3, h4, h5 {
 p {
     line-height: 1.4;
 }
+/*CSS start*/
+nav{
+    width: 90%;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: flex-end;
+    margin-left: 5%;
+    margin-bottom: 3%;
+}
+
+nav a {
+    text-decoration: none;
+    color: black;
+}
 
 .container {
     width: 800px;
