--- a/css/index.css
+++ b/css/index.css
@@ -80,6 +80,12 @@ nav a {
     color: black;
 }
 
+header {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 3%;
+}
+
 .container {
     width: 800px;
     margin: 0 auto;
@@ -124,6 +130,37 @@ nav a {
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+.middle-content .boxes .box1 {
+    background: teal;
+}
+.middle-content .boxes .box2 {
+    background: gold;
+}
+.middle-content .boxes .box3 {
+    background: cadetblue;
+}
+.middle-content .boxes .box4 {
+    background: coral;
+}
+.middle-content .boxes .box5 {
+    background: crimson;
+}
+.middle-content .boxes .box6 {
+    background: forestgreen;
+}
+.middle-content .boxes .box7 {
+    background:darkorchid
+}
+.middle-content .boxes .box8 {
+    background: hotpink;
+}
+.middle-content .boxes .box9 {
+    background: indigo;
+}
+.middle-content .boxes .box10 {
+    background: dodgerblue;
 }
 
 .bottom-content {
