--- a/css/index.css
+++ b/css/index.css
@@ -66,13 +66,23 @@ p {
     line-height: 1.4;
 }
 /*Header/Nav CSS start*/
+@keyframes bounce {
+    from {
+      transform: translateY(-10%);
+    }
+    
+    to {
+      transform: translateY(10%);
+    }
+  }
+  
 nav{
-    width: 90%;
+    width: 800px;
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-between;
     align-items: flex-end;
-    margin-left: 5%;
-    margin-bottom: 3%;
+    
+    margin: 3% 0;
 }
 
 nav a {
@@ -86,6 +96,7 @@ header {
     margin-bottom: 3%;
 }
 /*Header/Nav CSS end*/
+
 .container {
     width: 800px;
     margin: 0 auto;
@@ -194,4 +205,65 @@ footer nav {
 footer nav a {
     color: white;
     text-decoration: none;
+}
+
+/*about page CSS*/
+body  {
+    width: 800px;
+    margin: 0 auto;
+}
+div.abt-top {
+    display: flex;
+    flex-flow: row wrap;
+    border-bottom: 1px dashed black;
+    padding: 0 3% 3% 3%;
+    margin-bottom: 3%;
+}
+
+section.flex-container {
+    width: 900px;
+    height: auto;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    align-content: space-between;
+    /*cheating?*/
+    margin-left: -6%;
+    
+}
+section.flex-container div{
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: space-evenly;
+    max-width: 42%;
+    height: auto;
+    margin: 2%;
+    border-bottom: 1px dashed black;
+}
+
+section.flex-container div button {
+    background: white;
+    height: auto;
+    width: 100px;
+    border: 2px solid black;
+    border-radius: 5px;
+    padding:5px;
+    margin-bottom: 3%;
+}
+section.flex-container div button:hover {
+    color: white;
+    background: black;
+    animation-duration: 1s;
+    animation-name: bounce;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
+  
+}
+
+div.Together{
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: space-around;
+    align-content: center;
+    margin: 3%;
 }
