--- a/css/index.css
+++ b/css/index.css
@@ -79,7 +79,7 @@ p {
 nav{
     width: 800px;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: flex-end;
     margin: 3% 0;
 }
